--- a/Nac5_Trial.html
+++ b/Nac5_Trial.html
@@ -1,46 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<link rel="stylesheet" type="text/css" href="nac5_style.css"
-
-
-
-
+  <link rel="stylesheet" type="text/css" href="nac5_style.css" >
 </head>
 
 <body>
+  <header>
+    <img class="logoimg" alt="logo" src="nac_images/fakelogo.jpg">
+    <h1 class="page-title"> Natale a Corvetto </h1>
+  </header>
+  <nav>
+    <ul>
+      <li class="home"> <h2>Home </h2> </li>
 
-<header>
-  <img class="logoimg" alt="logo" src="nac_images/fakelogo.jpg">
-  <h1 class="page-title"> Natale a Corvetto </h1>
-</header>
+      <li class="past-editions">
+      <h2>Past Editions </h2> </li>
 
-<nav>
+      <li class="hall-of-fame">
+      <h2>Hall of Fame</h2> </li>
 
-<ul>
+      <li class="registered-players">
+      <a href="nac5players.html" style="text-decoration:none"> <h2> Registered Players </h2> </a>
+      </li>
+    </ul>
+  </nav>
 
-  <li class="home"> <h2>Home </h2> </li>
-
-  <li class="past-editions">
-  <h2>Past Editions </h2> </li>
-
-  <li class="hall-of-fame">
-  <h2>Hall of Fame</h2> </li>
-
-  <li class="registered-players">
-  <a href="nac5players.html" style="text-decoration:none"> <h2> Registered Players </h2> </a>
-  </li>
-</ul>
-
-</nav>
-
-<section>
-<! next steps aggiungere il countdown >
-
-<img class="cover_img" src="nac_images/nac5girls.png" alt="Natale a Corvetto">
-
-</section>
-
-</body>
+  <section>
+  <!-- next steps aggiungere il countdown -->
+    <img class="cover_img" src="nac_images/nac5girls.png" alt="Natale a Corvetto">
+  </section>
+  </body>
 </html>
